crates/eosio_macros/tests/ui/symbol-bad-precision.stderr
error: number too large to fit in target type
 --> $DIR/symbol-bad-precision.rs:6:16
  |
6 |     let _ = s!(256, "EOS");
  |                ^^^
